client/src/pages/recipeForm/RecipeForm.scss
.recipe-form-container {
  background: #fff;
  width: 100%;
}
.recipe-form  {
  display: flex;
  flex-direction: column;
  max-width: 800px;
  margin: 0 auto;
  padding: 0 1.5rem;
  & > * {
    margin-top: .75rem;
    margin-bottom: .75rem;
  }
  label {
    color: #333;
    display: block;
    padding-left: .25rem;
    font-size: .8rem;
    font-weight: 600;
  }
  input, textarea {
    color: #333;
    border: none;
    border-bottom: 2px #d9d9d9 solid;
    padding: .5rem .25rem;
    font-size: 1.25rem;
  }
  textarea {
    font-size: 1rem;
    line-height: 1.4;
  }
  h2 {
    padding-top: .5rem;
    font-size: 2rem;
  }

  .recipe-img, #title-wrapper {
    width: 100%;
  }
  #title-wrapper {
    display: flex;
    input {
      flex-grow: 1;
      margin-right: 2rem;
    }
  }

  #number-inputs {
    display: flex;
    & > div {
      width: 50%;
      padding-right: 1rem;
    }
    input {
      max-width: 100%;
    }
  }

  #misc-inputs {
    display: flex;
    padding-top: .5rem;
    & > div {
      width: 50%;
      padding-right: 1rem;
    }
  }
}

.uploadcare--widget {
  font-family: 'Open Sans', sans-serif;
  font-weight: 600;
}

#save {
  margin-left: auto;
  margin-right: auto;
}

@media only screen and (max-width: 600px) {
  #title-wrapper, #misc-inputs {
    flex-direction: column;
  }
  #title-wrapper input {
    margin-bottom: 1.5rem;
    margin-right: 0;
  }
  #misc-inputs > div {
    width: 100%;
    margin-bottom: 1.5rem;
    padding-right: 0;
  }
}

/* custom checkbox and radio button styles */
.recipe-form-container {
  .input-container {
    display: inline-block;
    position: relative;
    padding-left: 2.2rem;
    margin-bottom: .75rem;
    margin-right: 1rem;
    font-size: 1rem;
    font-weight: 400;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
  }
  
  .input-container input {
    position: absolute;
    opacity: 0;
    cursor: pointer;
    height: 0;
    width: 0;
  }
  
  .checkmark {
    position: absolute;
    top: 0;
    left: 0;
    height: 25px;
    width: 25px;
    background-color: #f2f2f2;
  }
  
  .checkmark.radio {
    border-radius: 50%;
  }
  
  .input-container:hover input ~ .checkmark {
    background-color: #d9d9d9;
  }
  
  .input-container input:checked ~ .checkmark {
    background-color: #333;
  }
  
  .checkmark:after {
    content: "";
    position: absolute;
    display: none;
  }
  
  .input-container input:checked ~ .checkmark:after {
    display: block;
  }
  
  .input-container .checkmark.box:after {
    left: 9px;
    top: 5px;
    width: 5px;
    height: 10px;
    border: solid white;
    border-width: 0 3px 3px 0;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
  }
  
  .input-container .checkmark.radio:after {
    top: 9px;
    left: 9px;
    width: 8px;
    height: 8px;
    border-radius: 50%;
    background: white;
  }
}

